--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "TOKEN": "YOUR TOKEN",
-  "CHANNEL": "VOICE CHANNEL ID",
-  "SERVER": "SERVER CHANNEL ID",
+  "TOKEN": "NzczMTc2NTcwODM5NTY0MzU5.X6Fayw.Ym9zT5bN4LPUTPtLiDGITIOAQOk",
+  "CHANNEL": "798342914631008256",
+  "SERVER": "703248315302543431",
   "STATUS": "NCS",
   "LIVE": "https://www.youtube.com/watch?v=IP0ZRj-_xG4"
 }
